# carbonledger

./: .env.example  .env.staging.example  CHANGELOG.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  VERIFICATION_CHECKLIST.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  staging.yml
backend/: CERTIFICATE_GENERATION.md  Dockerfile  ORACLE_SYNC.md  ORACLE_SYNC_QUICKSTART.md  QUICKSTART.md  package-lock.json  package.json
backend/docs/: LOGGING_QUICK_REFERENCE.md  STRUCTURED_LOGGING.md
backend/prisma/: schema.prisma  seed-staging.ts  seed.ts
backend/src/: app.module.ts  env.validation.ts  export-openapi.ts  indexer.ts  main.ts  redis.service.ts
backend/test/: retirement.e2e-spec.ts
contracts/carbon_credit/: Cargo.toml
contracts/carbon_marketplace/: Cargo.toml
contracts/carbon_oracle/: Cargo.toml
contracts/carbon_registry/: Cargo.toml
docs/: BRANCH_PROTECTION_GUIDE.md  DEPLOYMENT_GUIDE.md  README.md  carbon-credit-lifecycle.md  configuration.md  deployment.md  error-codes.md  freighter-integration.md  pr-error-codes-reference.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
logging/: README.md
oracle/: DEPLOYMENT.md  Dockerfile  ORACLE_SETUP.md  gunicorn.conf.py  requirements.txt
scripts/: backup-db.sh  perf-test-listings.js  run-perf-tests.sh
(+71 files in other folders)
