[package]
name = "carbon_marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "21.7.7", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils", "alloc"] }
carbon_credit = { path = "../carbon_credit", features = ["testutils"] }
proptest = { version = "1.4.0", default-features = false, features = ["std"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
